--- a/source/plugins/languages/examples.yml
+++ b/source/plugins/languages/examples.yml
@@ -1,5 +1,5 @@
 - name: Most used
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.languages.svg
     token: ${{ github.token }}
@@ -9,7 +9,7 @@
     plugin_languages_limit: 4
 
 - name: Most used (with details)
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.languages.details.svg
     token: ${{ github.token }}
@@ -20,7 +20,7 @@
     plugin_languages_limit: 4
 
 - name: Recently used
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.languages.recent.svg
     token: ${{ github.token }}
@@ -32,7 +32,7 @@
     plugin_languages_limit: 4
 
 - name: Indepth analysis
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.languages.indepth.svg
     token: ${{ github.token }}
